testsuite/tests/parser/should_fail/OpaqueParseFail4.stderr
OpaqueParseFail4.hs:6:12: error: [GHC-43895]
    Conflicting pragmas for ‘f’
    Pragmas:
      OPAQUE at OpaqueParseFail4.hs:5:12
      INLINE at OpaqueParseFail4.hs:6:12
  |
6 | {-# INLINE f #-}
  |            ^
